--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Load & Cache Dependencies 
         uses: vada-practice/7_gh_custom_actions/.github/actions/cached-deps@main
+        with:
+          caching: 'false'
       - name: Lint code
         run: npm run lint
   test:
