--- a/.github/actions/cached-deps/action.yml
+++ b/.github/actions/cached-deps/action.yml
@@ -4,7 +4,11 @@ inputs:
   caching:
     description: 'Whether to cache dependencies or not'
     required: false
-    default: 'true'
+    default: 'true'   # Here if iput not passed it considers as required: true, uses cache.
+outputs:
+  used-cache:
+    description: 'Whether the cache was used'
+    value: ${{ steps.install.outputs.cache }}
 runs:
   using: 'composite'
   steps:
@@ -16,6 +20,9 @@ runs:
         path: node_modules
         key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
     - name: Install dependencies
+      id: install
       if: steps.cache.outputs.cache-hit != 'true' || inputs.caching != 'true'
-      run: npm ci 
-      shell: bash
+      run: |
+        echo "cache'${{ inputs.caching }}'"  $GITHUB_OUTPUT
+        npm ci 
+      shell: bash  # In custom actions we must specify on which shell it runs or uses.
