--- a/.github/actions/cached-deps/action.yml
+++ b/.github/actions/cached-deps/action.yml
@@ -23,6 +23,6 @@ runs:
       id: install
       if: steps.cache.outputs.cache-hit != 'true' || inputs.caching != 'true'
       run: |
-        echo "cache'${{ inputs.caching }}'"  $GITHUB_OUTPUT
+        echo "cache'${{ inputs.caching }}'" >> $GITHUB_OUTPUT
         npm ci 
       shell: bash  # In custom actions we must specify on which shell it runs or uses.
