now just commented out input lines

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,8 +12,8 @@ jobs:
       - name: Load & Cache Dependencies 
         id: cache-deps
         uses: vada-practice/7_gh_custom_actions/.github/actions/cached-deps@main
-        with:
-          caching: 'true'
+        #with:
+          #caching: 'true'
       - name: Output Information
         run: echo "cache used? ${{ steps.cache-deps.outputs.used-cache }}"
       - name: Lint code
